// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input it renders 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #c0cad5;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #c0cad5;
  font-size: 16px;
}

.c0::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c0::-moz-placeholder {
  color: #4f6f8f;
}

.c0:-ms-input-placeholder {
  color: #4f6f8f;
}

.c0::placeholder {
  color: #4f6f8f;
}

.c0::-ms-clear {
  display: none;
}

.c0:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 2px #007aff;
}

@media screen and (min-width:40em) {
  .c0 {
    font-size: 14px;
  }
}

<input
  className="c0"
  fontSize={
    Array [
      2,
      null,
      1,
    ]
  }
  id="fake-test-id"
/>
`;

exports[`Input it renders an input element with a really large padding and margin 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #c0cad5;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #c0cad5;
  margin: 32px;
  padding: 32px;
  font-size: 16px;
}

.c0::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c0::-moz-placeholder {
  color: #4f6f8f;
}

.c0:-ms-input-placeholder {
  color: #4f6f8f;
}

.c0::placeholder {
  color: #4f6f8f;
}

.c0::-ms-clear {
  display: none;
}

.c0:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 2px #007aff;
}

@media screen and (min-width:40em) {
  .c0 {
    font-size: 14px;
  }
}

<input
  className="c0"
  fontSize={
    Array [
      2,
      null,
      1,
    ]
  }
  id="fake-test-id"
/>
`;

exports[`Input it renders an input element with a red border with a color prop is passed 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #c0cad5;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #c00;
  font-size: 16px;
}

.c0::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c0::-moz-placeholder {
  color: #4f6f8f;
}

.c0:-ms-input-placeholder {
  color: #4f6f8f;
}

.c0::placeholder {
  color: #4f6f8f;
}

.c0::-ms-clear {
  display: none;
}

.c0:focus {
  outline: 0;
  border-color: #c00;
  box-shadow: 0 0 0 2px #c00;
}

@media screen and (min-width:40em) {
  .c0 {
    font-size: 14px;
  }
}

<input
  className="c0"
  color="red"
  fontSize={
    Array [
      2,
      null,
      1,
    ]
  }
  id="fake-test-id"
/>
`;

exports[`Input it renders an input element with large text 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  color: inherit;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #c0cad5;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  margin: 0;
  border-color: #c0cad5;
  font-size: 24px;
}

.c0::-webkit-input-placeholder {
  color: #4f6f8f;
}

.c0::-moz-placeholder {
  color: #4f6f8f;
}

.c0:-ms-input-placeholder {
  color: #4f6f8f;
}

.c0::placeholder {
  color: #4f6f8f;
}

.c0::-ms-clear {
  display: none;
}

.c0:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 2px #007aff;
}

<input
  className="c0"
  fontSize={4}
  id="fake-test-id"
/>
`;
